# skillsaw-typos

./: Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/skillsaw_typos/: __init__.py  cli.py  rules.py
tests/: test_integration.py  test_rules.py
tests/fixture/: CLAUDE.md
